QSF - Candidate Referral/src/objects/QSF_RFL_Required_Skill__c.object
<CustomObject>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A mandatory skill for the position, candidates not fulfilling this requirement should be turned down.</description>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <referenceTo>QSF_RFL_Position__c</referenceTo>
        <relationshipLabel>Required Skills</relationshipLabel>
        <relationshipName>Required_Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <referenceTo>QSF_RFL_Skill__c</referenceTo>
        <relationshipLabel>Required Skills</relationshipLabel>
        <relationshipName>Required_Skills</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Required Skill</label>
    <nameField>
        <displayFormat>Skill-{0000000}</displayFormat>
        <label>Skill Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Required Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>